...
    <string name="channel_id" translatable="false">fanschat_channel_id</string>
    <string name="channel_name" translatable="false">General notifications</string>
    <string name="notification_channel_id" translatable="false">default</string>

    <!--Screen titles-->
    <string name="wall">Wall</string>
    <string name="news">News</string>
    <string name="rumours">Web Rumors</string>
    <string name="social">Social</string>
    <string name="stats">Stats</string>
    <string name="shop">Official Store</string>
    <string name="chat">Chat</string>
    <string name="video_chat">Video Chat</string>
    <string name="radio">Club Radio</string>
    <string name="tv">Club TV</string>
    <string name="tickets">Tickets</string>
    <string name="store">Official Store</string>
    <string name="quiz">Quiz</string>
...
    <string name="access_full_mtn">Join us now to access VIP events and exclusive access too…</string>
    <string name="join_sign_in">Join Now / Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="join">Join Now</string>
    <string name="login_facebook">Login with <b>Facebook</b></string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="nickname">Nickname</string>
    <string name="phone">Phone</string>
    <string name="error">Error</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">Registration error</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password_reset">Reset Password</string>
    <string name="reset_check_email">Please check your email for password reset options.</string>
...
    <string name="no_connection">No Connection</string>
    <string name="internet_needed">You need to be connected to the internet to do this</string>
    <string name="waiting_for_internet">Waiting for active internet connection…</string>

    <!--Profile-->
    <string name="go_to_profile">Go to Profile ></string>
    <string name="profile">Profile</string>
    <string name="contact_info">Contact info</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="chosen_language">Chosen language</string>
    <string name="location">Location</string>
    <string name="subscribed_since">Subscribed since</string>
    <string name="auto_translation">Automatic translation</string>
...
    <string name="member_info">Member info</string>
    <string name="requested_on">Requested </string>
    <string name="you">You</string>
    <string name="add_friend">Add a friend</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="add_friend_hint">Enter your friend\'s name, email or phone number in the search field.</string>
    <string name="save">Save</string>
    <string name="invite">Invite</string>
    <string name="follow_more">Follow More</string>
    <string name="friends_following_you">Friends following you:</string>
    <string name="find">Find</string>
    <string name="requests">Requests</string>
    <string name="official_accounts">Official Accounts</string>
    <string name="no_results">No results</string>
    <string name="user">User</string>
    <string name="more">More</string>
    <string name="friend_you_and">Friend you and </string>
...
    <string name="pin_title">Post this to your wall?</string>
    <string name="pin_confirm">Would you like to post this on your wall?</string>
    <string name="pin_message_hint">Enter a message with your shared post…</string>
    <string name="comment_hint">Enter your comment here…</string>
    <string name="read_more">Read more &gt;</string>
    <string name="read_less">Read less &lt;</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="translate">Translate</string>
    <string name="share">Share</string>
    <string name="post">Post</string>
    <string name="back">Back</string>
    <string name="translated">Translated</string>
    <string name="translated_from">Translated from</string>

...
    <string name="fixtures">Fixtures</string>
    <string name="results">Results</string>
    <string name="tables">Tables</string>

    <!--Placeholder-->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sin
    <string name="menu" translatable="false">Menu</string>
    <string name="name">Name</string>
    <string name="all_times_in_local_time">All times in Local time</string>

    <string name="terms_n_privacy">Terms &amp; Privacy</string>
    <string name="url_policy" translatable="false">http://balfanschat.dctest.com.au/sporting-privacy-page/</string>
    <string name="unnamed_chat">\'Unnamed Chat\'</string>
...
    <string name="new_follower">New Follower</string>
    <string name="unfollowed">Un-Followed</string>
    <string name="unfriended">Un-Friend</string>

    <string name="mine_friend">Friend of mine</string>

    <string name="register">Register</string>
    <string name="login_space">Log in</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="login_facebook_b">Login with Facebook</string>
    <string name="Cancel">Cancel</string>
    <string name="Okay">Okay</string>
    <string name="butn_done">Done</string>
...
