...
                android:animateLayoutChanges="true"
                android:clickable="true"
                android:focusable="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-4dp"
                    android:layout_marginBottom="24dp"
                    android:alpha="0.4"
...
                        android:layout_height="@dimen/height_1"
                        android:layout_weight="3" />

                </LinearLayout>

                <EditText
                    android:id="@+id/emailIdEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_button_height"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:background="@drawable/text_login_background_border"
                    android:hint="@string/email"
...
                    android:textColor="@color/white"
                    android:textColorHint="#A6FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/passwordEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_button_height"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:background="@drawable/text_login_background_border"
...
                    android:layout_height="@dimen/standard_button_height_regular"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/margin_30">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginButton"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/standard_button_height_regular"
                        android:fontFamily="@font/titillium_semibold"
                        android:text="@string/login_space"
                        android:textAllCaps="true"
...
