...
    <fragment
        android:id="@+id/feed"
        android:name="base.ui.fragment.wall.WallFragment"
        android:label="@string/wall"
        tools:layout="@layout/fragment_wall">
        <action
            android:id="@+id/createPost"
            app:destination="@id/createPost" />
        <action
            android:id="@+id/login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/register"
...
            android:id="@+id/authorize"
            app:destination="@id/authDecideFragment" />
        <action
            android:id="@+id/details"
            app:destination="@+id/detailFragment" />
        <action
            android:id="@+id/showFriends"
            app:destination="@+id/showFriends" />
    </fragment>
    <fragment
        android:id="@+id/notification"
        android:name="base.ui.fragment.notifications.NotificationFragment"
        tools:layout="@layout/fragment_notification">
...
    <fragment
        android:id="@+id/createJoinChat"
        android:name="base.ui.fragment.other.chat.CreateJoinChatContainerFragment"
        tools:layout="@layout/fragment_create_join_chat" />

    <fragment
        android:id="@+id/editProfile"
        android:name="base.ui.fragment.other.profile.ProfileEditFragment"
        tools:layout="@layout/fragment_profile_edit" />

    <fragment
        android:id="@+id/languagesFragment"
        android:name="base.ui.fragment.other.profile.LanguagesFragment"
...
