...
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        tools:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium" />

                    <EditText
                        android:id="@+id/body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:background="@null"
                        android:cursorVisible="false"
                        android:ellipsize="end"
...
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="normal"
                        tools:text="@string/lorem_ipsum" />

                    <include
                        android:id="@+id/post_actions"
                        layout="@layout/post_actions" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:paddingBottom="@dimen/_16sdp"
...
